--- a/src/components/testimonials.css
+++ b/src/components/testimonials.css
@@ -20,7 +20,9 @@
     max-height: 250px;
     max-width: 250px;
     position: relative;
-}
+    left: 12%;
+    top: -20%;
+} 
 
 .testimonal-name {
     position: absolute;
@@ -28,10 +30,117 @@
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: '1.5rem';
-}
+} 
 
 .testimonial-text {
     color: black;
     position: relative;
 }
+
+.testimonials {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem;
+  }
+  
+  .carousel {
+    /* border: 1px solid red;  */
+    height: 35rem;
+    width: 60rem;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    max-width: 1200px; 
+    border-radius: var(--radius-inner);
+    background-image: var(--color-btn-blue);
+  
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    z-index: -1;
+  }
+  
+  .carousel::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    border: 5px solid var(--color-text-green); 
+    box-shadow: rgba(0, 0, 0, 1) 0px 0px 20px 5px inset;
+  }
+  
+  .carousel__inner {
+    height: 100%;
+    min-width: 400%; 
+    display: flex;
+    transition: all ease 0.5s;
+    background-image: var(--color-btn-blue);
+  }
+
+  .carousel__item {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* padding: 6rem; */
+    position: relative;
+    overflow: hidden;
+     z-index: -1; 
+  }
+  
+  .carousel__prev,
+  .carousel__next {
+    /* border: 1px solid red; */
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-position: center;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    opacity: 0.5;
+  }
+  
+  .carousel__prev {
+    left: 1.5rem;
+  }
+  
+  .carousel__next {
+    right: 1.5rem;
+  }
+  
+  .carousel__prev:hover,
+  .carousel__next:hover {
+    opacity: 1;
+  }
+  
+  .carousel__indicators {
+    position: absolute;
+    bottom: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+  
+  .carousel__indicators span {
+    display: inline-block;
+    background-color: var(--color-text-dark);
+    width: 30px;
+    height: 4px;
+    border-radius: 2px;
+    opacity: 0.5;
+    cursor: pointer;
+    margin: 3px;
+  }
+  
+  .carousel__indicators span.active {
+    opacity: 1;
+  }
