--- a/src/styles/EditInfo.css
+++ b/src/styles/EditInfo.css
@@ -47,3 +47,9 @@
     margin: 10px;
     font-weight: 600;
 }
+
+#delete__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
