--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -2,59 +2,62 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    align-items: center; 
 }
+
 .testimonal-card {
- max-width: 325px;
- height: 400px;
+ width: 100%;
+ height: 85%;
  background-color: #4F6D7A;
- display: flex;
- justify-content: center; 
+ /* display: flex; */
+ /* justify-content: center;  */
  align-items: center; 
  position: relative;
+ margin: 8px;
 }
 
 .testimonal-image {
-    opacity: 0.6;
+    opacity: 0.8;
     border-radius: 50%;
     max-height: 250px;
     max-width: 250px;
-    position: relative;
-    left: 12%;
-    top: -20%;
+    /* position: relative; */
+    /* left: 9%; */
+    margin: 27px;
+    /* top: -20%; */
 } 
 
 .testimonal-name {
     position: absolute;
-    color: black;
-    top: 35%;
-    left: 50%;
+    color: white;
+    top: 32%;
+    left: 48%;
     transform: translate(-50%, -50%);
 } 
 
 .testimonial-text {
     color: black;
-    position: relative;
+    /* position: relative; */
+    /* font-family: sans-serif; */
 }
 
 .testimonials {
-    /* border: 1px solid black; */
+    border: 1px solid green;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem;
+    justify-content: center;
+    padding: 3rem;
   }
-  
+
   .carousel {
-    /* border: 1px solid red;  */
+    border: 1px solid red; 
     height: 35rem;
     width: 60rem;
     margin-top: 40px;
     margin-bottom: 40px;
     max-width: 1200px; 
-    border-radius: var(--radius-inner);
-    background-image: var(--color-btn-blue);
-  
+    border-radius: var(--radius-inner);  
     overflow: hidden;
     position: relative;
     display: flex;
@@ -72,7 +75,7 @@
     height: 100%;
     pointer-events: none;
     border: 5px solid var(--color-text-green); 
-    box-shadow: rgba(0, 0, 0, 1) 0px 0px 20px 5px inset;
+    /* box-shadow: rgba(62, 62, 62, 1) 0px 0px 20px 1px inset; */
   }
   
   .carousel__inner {
@@ -86,11 +89,12 @@
   .carousel__item {
     flex: 1;
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 6rem; */
-    position: relative;
+    /* padding: 6rem;  */
+    position: relative; 
     overflow: hidden;
      z-index: -1; 
   }
@@ -100,21 +104,23 @@
     /* border: 1px solid red; */
     display: inline-block;
     position: absolute;
-    top: 50%;
+    /* top: 50%; */
     transform: translateY(-50%);
     background-position: center;
     background-size: auto 100%;
     background-repeat: no-repeat;
     cursor: pointer;
-    opacity: 0.5;
+    /* opacity: 0.5; */
   }
   
   .carousel__prev {
-    left: 1.5rem;
+    left: 3rem;
+    border: 1px solid blue;
   }
   
   .carousel__next {
-    right: 1.5rem;
+    right: 3rem;
+    border: 1px solid blue;
   }
   
   .carousel__prev:hover,
@@ -144,3 +150,9 @@
   .carousel__indicators span.active {
     opacity: 1;
   }
+
+.carousel__controls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
