downloaded sweetalert2 and used it on the login page and the contact us page

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -50,3 +50,7 @@
     font-family: sans-serif;
     background-color: rgb(219, 119, 94, 0.9);
 }
+
+.popup__class {
+    font-family: sans-serif;
+}
