--- a/src/styles/mapbox.css
+++ b/src/styles/mapbox.css
@@ -19,6 +19,15 @@
   /* border-radius: var(--radius-inner); */
 }
 
+.map__center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  opacity: 0.5;
+}
+
 /* POPUP  */
 /* ANCHOR -- POPUP */
 
