--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -1,16 +1,28 @@
-.cardcontainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center; 
-}
+/* .testimonial-main-container {
+  border: 1px red solid;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  justify-content: center;
+  align-items: center;
+} */
+.testimonal-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid blue; */
+  max-width: 90%;
 
+
+  /* max-height: 80%; */
+}
 .testimonal-card {
  width: 100%;
  height: 85%;
  background-color: #4F6D7A;
  /* display: flex; */
- /* justify-content: center;  */
+ justify-content: center; 
  align-items: center; 
  position: relative;
  margin: 8px;
@@ -20,7 +32,7 @@
     opacity: 0.8;
     border-radius: 50%;
     max-height: 250px;
-    max-width: 250px;
+    max-width: 250px; 
     /* position: relative; */
     /* left: 9%; */
     margin: 27px;
@@ -40,14 +52,19 @@
 }
 
 .testimonials {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 3rem;
   }
-
+.section__header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* 
   .carousel {
     border: 1px solid red; 
     height: 35rem;
@@ -61,9 +78,9 @@
     display: flex;
     justify-content: flex-start;
     z-index: -1;
-  }
+  } */
   
-  .carousel::after {
+  /* .carousel::after {
     content: '';
     display: block;
     position: absolute;
@@ -74,9 +91,9 @@
     pointer-events: none;
     border: 5px solid var(--color-text-green); 
     /* box-shadow: rgba(62, 62, 62, 1) 0px 0px 20px 1px inset; */
-  }
-  
-  .carousel__inner {
+  /* } */
+   
+  /* .carousel__inner {
     height: 100%;
     min-width: 400%; 
     display: flex;
@@ -92,25 +109,25 @@
     align-items: center;
     justify-content: center;
     /* padding: 6rem;  */
-    position: relative; 
+    /* position: relative; 
     overflow: hidden;
      z-index: -1; 
-  }
+  } */ 
   
-  .carousel__prev,
-  .carousel__next {
+  /* .carousel__prev,
+  .carousel__next { */
     /* border: 1px solid red; */
-    display: inline-block;
-    position: absolute;
+    /* display: inline-block;
+    position: absolute; */
     /* top: 50%; */
-    transform: translateY(-50%);
+    /* transform: translateY(-50%);
     background-position: center;
     background-size: auto 100%;
     background-repeat: no-repeat;
-    cursor: pointer;
+    cursor: pointer; */
     /* opacity: 0.5; */
-  }
-  
+  /* } */
+/*   
   .carousel__prev {
     left: 3rem;
     border: 1px solid blue;
@@ -124,9 +141,9 @@
   .carousel__prev:hover,
   .carousel__next:hover {
     opacity: 1;
-  }
+  } */
   
-  .carousel__indicators {
+  /* .carousel__indicators {
     position: absolute;
     bottom: 12px;
     left: 50%;
@@ -143,8 +160,8 @@
     opacity: 0.5;
     cursor: pointer;
     margin: 3px;
-  }
-  
+  } */
+/*   
   .carousel__indicators span.active {
     opacity: 1;
   }
@@ -153,4 +170,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
