--- a/src/styles/mapbox.css
+++ b/src/styles/mapbox.css
@@ -1,4 +1,5 @@
 .map {
+  /* border: 1px solid red; */
   width: 100%;
   height: 100%;
   position: relative;
@@ -11,7 +12,7 @@
 .map__sidebar {
   position: absolute;
   top: 1rem;
-  left: 1rem;
+  right: 28rem;
   padding: 0.5rem 1rem;
   z-index: 1;
   background-color: white;
