--- a/src/styles/EditInfo.css
+++ b/src/styles/EditInfo.css
@@ -53,3 +53,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+.my-swal {
+    z-index: 30000;
+  }
+  .popup__class {
+    font-family: sans-serif;
+}
