--- a/src/styles/explore.css
+++ b/src/styles/explore.css
@@ -42,6 +42,7 @@
   background-color: white;
   /* transform: translateX(-110%); */
   transition: all 0.5s ease-out;
+  overflow: hidden scroll;
 }
 
 .show-posts {
