--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -4,6 +4,12 @@
   padding: 0.5rem;
   /* max-width: 70rem; */
 }
+.post--newsfeed {
+  background-color: lightcoral;
+}
+.post--explore {
+  background-color: lightgreen;
+}
 .post__top {
   display: flex !important;
 }
