--- a/src/styles/EditInfo.css
+++ b/src/styles/EditInfo.css
@@ -1,26 +1,38 @@
-.edit__bg__img{
-    /* background-image: url('placeholder.jpg'); */
-}
+/* .edit__bg__img{ */
+    /* background-image: url('public/redrock-two.jpeg'); */
+/* } */
 
 .useless {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('public/redrock-six.jpeg');
+    background-repeat: no-repeat;
+    justify-content: center;
+    background-size: 100% 100%;
+    
 }
 
 .mini__container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20px;
-    padding: 20px;
+    padding: 15px;
+    background-color: white;
+    border-radius: 4px;
 }
 
+
 .text__container {
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
     display: flex;
     flex-direction: column;
+    background-color: #aab6c5;
+    border-radius: 12px;
+    padding: 10px;
+    margin-top: 10px;
 }
 
 #edit__fields {
