--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -5,6 +5,7 @@
   /* max-width: 70rem; */
 }
 .post--newsfeed {
+  width: 40rem;
   background-color: lightcoral;
 }
 .post--explore {
@@ -64,6 +65,7 @@
   display: flex !important;
   align-items: center;
   padding: 0.5rem;
+  gap: 1rem;
 }
 
 .post__user-pic {
@@ -84,6 +86,7 @@
   /* display: flex !important; */
   /* border: 1px solid green; */
   padding: 0.5rem;
+  text-wrap: wrap;
 }
 
 /* RATINGS */
