--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -1,49 +1,49 @@
-/* .testimonial-main-container {
-  border: 1px red solid;
+.testimonial-main-container{
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
-  justify-content: center;
-  align-items: center;
-} */
-.testimonal-container {
+  margin-left: 30px;
+}
+.testimonial-container {
+  /* border: 1px solid blue; */
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid blue; */
   max-width: 90%;
-
-
-  /* max-height: 80%; */
 }
-.testimonal-card {
+
+.testimonial-card {
  width: 100%;
  height: 85%;
  background-color: #4F6D7A;
- /* display: flex; */
+ display: flex;
  justify-content: center; 
  align-items: center; 
  position: relative;
  margin: 8px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
 }
 
-.testimonal-image {
+.testimonial-image {
     opacity: 0.8;
     border-radius: 50%;
     max-height: 250px;
     max-width: 250px; 
-    /* position: relative; */
-    /* left: 9%; */
-    margin: 27px;
-    /* top: -20%; */
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 } 
 
-.testimonal-name {
+.testimonial-name {
     position: absolute;
     color: white;
     top: 32%;
-    left: 48%;
+    left: 50%;
     transform: translate(-50%, -50%);
 } 
 
@@ -59,115 +59,12 @@
     justify-content: center;
     padding: 3rem;
   }
+
 .section__header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-/* 
-  .carousel {
-    border: 1px solid red; 
-    height: 35rem;
-    width: 60rem;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    max-width: 1200px; 
-    border-radius: var(--radius-inner);  
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    z-index: -1;
-  } */
-  
-  /* .carousel::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    border: 5px solid var(--color-text-green); 
-    /* box-shadow: rgba(62, 62, 62, 1) 0px 0px 20px 1px inset; */
-  /* } */
-   
-  /* .carousel__inner {
-    height: 100%;
-    min-width: 400%; 
-    display: flex;
-    transition: all ease 0.5s;
-    background-image: var(--color-btn-blue);
-  }
 
-  .carousel__item {
-    flex: 1;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* padding: 6rem;  */
-    /* position: relative; 
-    overflow: hidden;
-     z-index: -1; 
-  } */ 
-  
-  /* .carousel__prev,
-  .carousel__next { */
-    /* border: 1px solid red; */
-    /* display: inline-block;
-    position: absolute; */
-    /* top: 50%; */
-    /* transform: translateY(-50%);
-    background-position: center;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    cursor: pointer; */
-    /* opacity: 0.5; */
-  /* } */
-/*   
-  .carousel__prev {
-    left: 3rem;
-    border: 1px solid blue;
-  }
-  
-  .carousel__next {
-    right: 3rem;
-    border: 1px solid blue;
-  }
-  
-  .carousel__prev:hover,
-  .carousel__next:hover {
-    opacity: 1;
-  } */
-  
-  /* .carousel__indicators {
-    position: absolute;
-    bottom: 12px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-  }
-  
-  .carousel__indicators span {
-    display: inline-block;
-    background-color: var(--color-text-dark);
-    width: 30px;
-    height: 4px;
-    border-radius: 2px;
-    opacity: 0.5;
-    cursor: pointer;
-    margin: 3px;
-  } */
-/*   
-  .carousel__indicators span.active {
-    opacity: 1;
-  }
 
-.carousel__controls {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+
