--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -8,7 +8,6 @@
 
 .about-heading {
     /* border: 1px solid red; */
-    font-family: "Permanent Marker", cursive;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,15 +19,12 @@
     /* border: 1px solid green; */
     display: flex;
     justify-content: center;
-    /* padding-right: 25px; */
+    background-image: cover;
 }
 
 .about-subheading {
     /* border: 1px solid blue; */
     height: 300px;
-    font-family: "Permanent Marker", cursive;
-    /* margin-left: 5px;
-    margin-right: 5px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,8 +37,6 @@
 .about-description {
     /* border: 1px solid red; */
     height: 300px;
-    /* margin-left: 5px;
-    margin-right: 5px; */
     font-family: sans-serif;
     font-size: 1.3rem;
     display: flex;
