--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -10,7 +10,7 @@
     background-attachment: fixed;
     background-size: cover;
     position: relative;
-    font-family: sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 .signup-image {
