--- a/src/styles/benefits.css
+++ b/src/styles/benefits.css
@@ -1,5 +1,5 @@
 .benefits {
-  background: url('./benefits_1.jpg');
+  background: url('public/benefits-tow.jpeg');
   background-size: cover;
   background-position: center;
   height: 50rem;
@@ -13,19 +13,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.heading {
+  position: absolute;
+  padding: 7px;
 }
 
 /* CARDS */
 .benefit__card {
   position: absolute;
-
-  width: 10rem;
-  height: 8rem;
+  width: 17rem;
+  height: 11rem;
   background-color: rgba(0, 0, 0);
   border-radius: 2px;
   z-index: 1;
-  padding: 0.5rem;
+  padding: 18px;
 }
 
 .card--1 {
@@ -33,12 +36,12 @@
   right: 22rem;
 }
 .card--2 {
-  top: 19rem;
+  top: 20rem;
   left: 19rem;
 }
 .card--3 {
-  bottom: 3rem;
-  right: 20rem;
+  bottom: 1rem;
+  right: 19.5rem;
 }
 
 /* NODES */
@@ -186,7 +189,7 @@
   right: 39rem;
 }
 .dot--31 {
-  top: 37rem;
+  top: 36.5rem;
   right: 36rem;
 }
 .dot--32 {
