--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -2,14 +2,19 @@
   display: flex;
   flex-direction: column;
   margin-left: 30px;
+  border: 1px purple solid;
 }
 .testimonial-container {
-  /* border: 1px solid blue; */
+  border: 1px solid blue;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   max-width: 90%;
+}
+.carousel-container{
+  border: 1px solid green;
+
 }
 
 .testimonial-card {
@@ -25,6 +30,7 @@
  flex-direction: column;
  justify-content: center;
  align-items: center;
+ 
 }
 
 .testimonial-image {
