--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -1,9 +1,14 @@
 .features__box {
-    margin: 5rem;
-    font-family: sans-serif;
+    /* border: 1px solid purple; */
     text-align: center;
-    padding: 1.5rem;
     background-color: #7286a0;
     color: #fff;
+    padding-bottom: 45px;
+    padding-top: 25px;
 }
+
+.features-heading {
+    margin-bottom: 25px;
+}
+
 
