--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -1,39 +1,47 @@
 .testimonial-main-container{
+  /* border: 1px purple solid; */
   display: flex;
   flex-direction: column;
-  margin-left: 30px;
-  border: 1px purple solid;
+
+  /* margin-left: 30px; */
 }
 .testimonial-container {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   max-width: 90%;
+  height: 100%;
 }
-.carousel-container{
+/* .carousel-container{
   border: 1px solid green;
-
-}
+} */
 
 .testimonial-card {
+/* border: 1px pink solid; */
  width: 100%;
- height: 85%;
+ height: 90%;
  background-color: #4F6D7A;
  display: flex;
  justify-content: center; 
  align-items: center; 
  position: relative;
- margin: 8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
 }
+.image-name-container {
+  /* border: 1px solid purple; */
+  position: relative;
+  padding: 15px;
+  margin-top: 30px;
+}
 
 .testimonial-image {
+  /* border: 1px greenyellow solid; */
     opacity: 0.8;
     border-radius: 50%;
     max-height: 250px;
@@ -43,33 +51,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 } 
 
 .testimonial-name {
+  /* border: 1px yellow solid; */
     position: absolute;
     color: white;
-    top: 32%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 } 
 
 .testimonial-text {
-    color: black;
+  /* border: 1px yellow solid; */
+  color: black;
+  padding: 15px;
+  height: 200px;
+  padding-top: 25px;
 }
 
-.testimonials {
-    /* border: 1px solid green; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 3rem;
-  }
-
 .section__header {
+  /* border: 2px yellow solid; */
+  margin-top: 25px;
+  margin-bottom: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 40px;
+  background-color: #7286a0;
+  color: white;
 }
 
 
