--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -14,6 +14,8 @@
 }
 .about-bio {
     width: 250px;
+    font-size: 1.5rem;
+    text-align: center;
 }
 .about-image {
     /* border: 1px solid green; */
