--- a/src/styles/newsfeed.css
+++ b/src/styles/newsfeed.css
@@ -20,6 +20,10 @@
   background-color: white;
   transition: all 0.5s ease-out;
   overflow: hidden scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .show-user-info {
@@ -27,6 +31,12 @@
 }
 
 .user-info__row {
+}
+.newsfeed__profile-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .newsfeed__clear-user-posts {
